--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link scr="index.js">
+    <script src="index.js"></script>
 
 </head>
 
